--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    
+      <meta name="google-site-verification" content="4z-FJUD8assW1Ld0uh93R5gpn4oxYu2JhyZlU74peKo" /> 
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
